fix: resolve minor code review issues
1. Remove TRACE logging for BasicBinder (floods logs with sensitive data)
2. Remove unused CompletableFuture import
3. Add V3 migration to remove duplicate invoice_number index
4. Narrow Exception catch in extractLineItems (only catches TaxInvoiceParsingException)
5. Use Java 21 .toList() instead of Collectors.toList()